--- a/literature.bib
+++ b/literature.bib
@@ -217,3 +217,130 @@
 	pages = {11016--11022},
 	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WE5C5SDZ/Liu et al. - 2011 - ReaxFF-lg Correction of the ReaxFF Reactive Force.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZUR95DPW/jp201599t.html:text/html}
 }
+
+@article{williams_embedded-atom_2006,
+	title = {An embedded-atom potential for the Cu–Ag system},
+	volume = {14},
+	issn = {0965-0393},
+	url = {http://iopscience.iop.org/0965-0393/14/5/002},
+	doi = {10.1088/0965-0393/14/5/002},
+	abstract = {A new embedded-atom method ({EAM}) potential has been constructed for Ag by fitting to experimental and first-principles data. The potential accurately reproduces the lattice parameter, cohesive energy, elastic constants, phonon frequencies, thermal expansion, lattice-defect energies, as well as energies of alternate structures of Ag. Combining this potential with an existing {EAM} potential for Cu, a binary potential set for the Cu–Ag system has been constructed by fitting the cross-interaction function to first-principles energies of imaginary Cu–Ag compounds. Although properties used in the fit refer to the 0 K temperature (except for thermal expansion factors of pure Cu and Ag) and do not include liquid configurations, the potentials demonstrate good transferability to high-temperature properties. In particular, the entire Cu–Ag phase diagram calculated with the new potentials in conjunction with Monte Carlo simulations is in satisfactory agreement with experiment. This agreement suggests that {EAM} potentials accurately fit to 0 K properties can be capable of correctly predicting simple phase diagrams. Possible applications of the new potential set are outlined.},
+	number = {5},
+	urldate = {2014-09-25},
+	journal = {Modelling and Simulation in Materials Science and Engineering},
+	author = {Williams, P. L. and Mishin, Y. and Hamilton, J. C.},
+	month = jul,
+	year = {2006},
+	pages = {817},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/HXMKZWGA/Williams et al. - 2006 - An embedded-atom potential for the Cu–Ag system.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SZRZNPH2/002.html:text/html}
+}
+
+@article{wu_cu/ag_2009,
+	title = {Cu/Ag {EAM} potential optimized for heteroepitaxial diffusion from ab initio data},
+	volume = {47},
+	issn = {0927-0256},
+	url = {http://www.sciencedirect.com/science/article/pii/S092702560900370X},
+	doi = {10.1016/j.commatsci.2009.09.026},
+	abstract = {A binary embedded-atom method ({EAM}) potential is optimized for Cu on Ag(1 1 1) by fitting to ab initio data. The fitting database consists of {DFT} calculations of Cu monomers and dimers on Ag(1 1 1), specifically their relative energies, adatom heights, and dimer separations. We start from the Mishin Cu–Ag {EAM} potential and first modify the Cu–Ag pair potential to match the {FCC}/{HCP} site energy difference then include Cu–Cu pair potential optimization for the entire database. The potential generated from this optimization method gives better agreement to {DFT} calculations of Cu monomers, dimers, and trimers than previous {EAMs} as well as a {SEAM} optimized potential. In trimer calculations, the optimized potential produces the {DFT} relative energy between {FCC} and {HCP} trimers, though a different ground state is predicted. We use the optimized potential to calculate diffusion barriers for Cu monomers, dimers, and trimers. The predicted monomer barrier is the same as {DFT}, while experimental barriers for monomers and dimers are lower than predicted here. We attribute the difference with experiment to the overestimation of surface adsorption energies by {DFT} and a simple correction is presented. Our results show that this optimization method is suitable for other heteroepitaxial systems; and that the optimized Cu–Ag {EAM} can be applied in the study of larger Cu islands on Ag(1 1 1).},
+	number = {2},
+	urldate = {2014-09-25},
+	journal = {Computational Materials Science},
+	author = {Wu, Henry H. and Trinkle, Dallas R.},
+	month = dec,
+	year = {2009},
+	keywords = {Copper, Heteroepitaxial diffusion, Molecular dynamics, Silver, surface diffusion},
+	pages = {577--583},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QN8SF8HD/Wu and Trinkle - 2009 - CuAg EAM potential optimized for heteroepitaxial .pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JJV3MWJD/S092702560900370X.html:text/html}
+}
+
+@article{foiles_calculation_1985,
+	title = {Calculation of the surface segregation of Ni-Cu alloys with the use of the embedded-atom method},
+	volume = {32},
+	url = {http://link.aps.org/doi/10.1103/PhysRevB.32.7685},
+	doi = {10.1103/PhysRevB.32.7685},
+	abstract = {The surface composition of Ni-Cu alloys has been calculated as a function of atomic layer, crystal face, and bulk composition at a temperature of 800 K. The results show that the composition varies nonmonotonically near the surface with the surface layer strongly enriched in Cu while the near-surface layers are enriched in Ni. The calculations use the embedded-atom method [M. S. Daw and M. I. Baskes, Phys. Rev. B 29, 6443 (1984)] in conjunction with Monte Carlo computer simulations. The embedding functions and pair interactions needed to describe Ni-Cu alloys are developed and applied to the calculation of bulk energies, lattice constants, and short-range order. The heats of segregation are computed for the dilute limit, and the composition profile is obtained for the (100), (110), and (111) surfaces for a variety of bulk compositions. The results are found to be in accord with experimental data.},
+	number = {12},
+	urldate = {2014-09-25},
+	journal = {Physical Review B},
+	author = {Foiles, S. M.},
+	month = dec,
+	year = {1985},
+	pages = {7685--7693},
+	file = {APS Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/G28M4VP9/PhysRevB.32.html:text/html;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/C3H8QFTQ/Foiles - 1985 - Calculation of the surface segregation of Ni-Cu al.pdf:application/pdf}
+}
+
+@article{adams_self-diffusion_1989,
+	title = {Self-diffusion and impurity diffusion of fee metals using the five-frequency model and the Embedded Atom Method},
+	volume = {4},
+	issn = {2044-5326},
+	url = {http://journals.cambridge.org/article_S088429140000409X},
+	doi = {10.1557/JMR.1989.0102},
+	abstract = {The activation energies for self-diffusion of transition metals (Au, Ag, Cu, Ni, Pd, Pt) have been calculated with the Embedded Atom Method ({EAM}); the results agree well with available experimental data for both mono-vacancy and di-vacancy mechanisms. The {EAM} was also used to calculate activation energies for vacancy migration near dilute impurities. These energies determine the atomic jump frequencies of the classic “five-frequency formula,” which yields the diffusion rates of impurities by a mono-vacancy mechanism. These calculations were found to agree fairly well with experiment and with Neumann and Hirschwald's “Tm” model.},
+	number = {01},
+	urldate = {2014-09-25},
+	journal = {Journal of Materials Research},
+	author = {Adams, J. B. and Foiles, S. M. and Wolfer, W. G.},
+	month = feb,
+	year = {1989},
+	pages = {102--112},
+	file = {Cambridge Journals Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ARNKGC8H/displayAbstract.html:text/html;Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/KTV3G8WP/Adams et al. - 1989 - Self-diffusion and impurity diffusion of fee metal.pdf:application/pdf}
+}
+
+@article{mendelev_development_2009,
+	title = {Development of suitable interatomic potentials for simulation of liquid and amorphous Cu–Zr alloys},
+	volume = {89},
+	issn = {1478-6435},
+	url = {http://dx.doi.org/10.1080/14786430902832773},
+	doi = {10.1080/14786430902832773},
+	abstract = {We present a new semi-empirical potential suitable for molecular dynamics simulations of liquid and amorphous Cu–Zr alloys. To provide input data for developing the potential, new experimental measurements of the structure factors for amorphous Cu64.5Zr35.5 alloy were performed. In this work, we propose a new method to include diffraction data in the potential development procedure, which also includes fitting to first-principles and liquid density and enthalpy of mixing data. To refine the new potential, we used first-principles and liquid enthalpy of mixing data published earlier combined with the densities of liquid Cu64.5Zr35.5 measured over a range of temperatures. We show that the potential predicts a liquid-to-glass transition temperature that agrees reasonably well with experimental data. Finally, we compare the new potential with two previously developed semi-empirical potentials for Cu–Zr alloys and examine their comparative and contrasting descriptions of structure and properties for Cu64.5Zr35.5 liquids and glasses.},
+	number = {11},
+	urldate = {2014-09-25},
+	journal = {Philosophical Magazine},
+	author = {Mendelev, M.I. and Kramer, M.J. and Ott, R.T. and Sordelet, D.J. and Yagodin, D. and Popel, P.},
+	month = apr,
+	year = {2009},
+	pages = {967--987},
+	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/SPJEB6IA/14786430902832773.html:text/html}
+}
+
+@article{mendelev_using_2007,
+	title = {Using atomistic computer simulations to analyze x-ray diffraction data from metallic glasses},
+	volume = {102},
+	issn = {0021-8979, 1089-7550},
+	url = {http://scitation.aip.org/content/aip/journal/jap/102/4/10.1063/1.2769157},
+	doi = {10.1063/1.2769157},
+	abstract = {We propose a method of using atomistic computer simulations to obtain partial pair correlation functions from wide angle diffraction experiments with metallic liquids and their glasses. In this method, a model is first created using a semiempiricalinteratomic potential and then an additional atomic force is added to improve the agreement with experimental diffraction data. To illustrate this approach, the structure of an amorphous Cu 64.5 Zr 35.5 alloy is highlighted, where we present the results for the semiempirical many-body potential and fitting to x-ray diffraction data. While only x-ray diffraction data were used in the present work, the method can be easily adapted to the case when there are also data from neutron diffraction or even in combination. Moreover, this method can be employed in the case of multicomponent systems when the data of several diffraction experiments can be combined.},
+	number = {4},
+	urldate = {2014-09-25},
+	journal = {Journal of Applied Physics},
+	author = {Mendelev, M. I. and Sordelet, D. J. and Kramer, M. J.},
+	month = aug,
+	year = {2007},
+	keywords = {Amorphous metals, Copper, Interatomic potentials, Semi empirical calculations, X-ray diffraction},
+	pages = {043501},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/WQT8MB7J/Mendelev et al. - 2007 - Using atomistic computer simulations to analyze x-.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/R995UVNR/1.html:text/html}
+}
+
+@article{mendelev_analysis_2008,
+	title = {Analysis of semi-empirical interatomic potentials appropriate for simulation of crystalline and liquid Al and Cu},
+	volume = {88},
+	issn = {1478-6435},
+	url = {http://dx.doi.org/10.1080/14786430802206482},
+	doi = {10.1080/14786430802206482},
+	abstract = {We investigate the application of embedded atom method ({EAM}) interatomic potentials in the study of crystallization kinetics from deeply undercooled melts, focusing on the fcc metals Al and Cu. For this application, it is important that the {EAM} potential accurately reproduces melting properties and liquid structure, in addition to the crystalline properties most commonly fit in its development. To test the accuracy of previously published {EAM} potentials and to guide the development of new potential in this work, first-principles calculations have been performed and new experimental measurements of the Al and Cu liquid structure factors have been undertaken by X-ray diffraction. We demonstrate that the previously published {EAM} potentials predict a liquid structure that is too strongly ordered relative to measured diffraction data. We develop new {EAM} potentials for Al and Cu to improve the agreement with the first-principles and measured liquid diffraction data. Furthermore, we calculate liquid-phase diffusivities and find that this quantity correlates well with the liquid structure. Finally, we perform molecular dynamics simulations of crystal nucleation from the melt during quenching at constant cooling rate. We find that {EAM} potentials, which predict the same zero-temperature crystal properties but different liquid structures, can lead to quite different crystallization kinetics. More interestingly, we find that two potentials predicting very similar equilibrium solid and liquid properties can still produce very different crystallization kinetics under far-from-equilibrium conditions characteristic of the rapid quenching simulations employed here.},
+	number = {12},
+	urldate = {2014-09-25},
+	journal = {Philosophical Magazine},
+	author = {Mendelev, M.I. and Kramer, M.J. and Becker, C.A. and Asta, M.},
+	month = apr,
+	year = {2008},
+	pages = {1723--1750},
+	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/2PHNVNQG/14786430802206482.html:text/html}
+}
+
+@misc{_interatomic_2014,
+	title = {Interatomic Potentials Repository Project - Cu},
+	url = {http://www.ctcms.nist.gov/potentials/Cu.html},
+	month = sep,
+	year = {2014}
+}
