--- a/packages.tex
+++ b/packages.tex
@@ -55,6 +55,6 @@
         stretch=10,
         shrink=10
 ]{microtype}
-\usepackage{siunitx}
+\usepackage[range-phrase={\,bis\,}]{siunitx}
 
 \usepackage{mhchem}
