--- a/results.tex
+++ b/results.tex
@@ -8,6 +8,8 @@ Präparation der Substrate geschah entweder durch Relaxation einer zufälligen S
 
 \input{goldpvd}
 \clearpage
+\input{copperpvd}
+\clearpage
 \input{siliconpvd}
 \clearpage
 \input{silicacvd}
