copper: labels changed from gold to copper; gold: roughness and surfaces added

--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -78,7 +78,7 @@ Die \SI{100x100}{\angstrom} breiten Kristalle werden perfekt fortgesetzt, wobei 
 
 \subsubsection{Strukturierte Substrate}
 
-Als Stabilitätsprüfung wurden auch Abscheidungen auf strukturierten Substraten (Abbildung \ref{fig:goldsubstrate}) mit den gleichbleibenden Prozessbedingungen simuliert.
+Als Stabilitätsprüfung wurden auch Abscheidungen auf strukturierten Substraten (Abbildung \ref{fig:coppersubstrate}) mit den gleichbleibenden Prozessbedingungen simuliert.
 Es wurden Stufen und Spitzen mit Neigungen von jeweils \SI{15}{\degree}, \SI{20}{\degree}, \SI{30}{\degree}, \SI{45}{\degree}, \SI{60}{\degree} und \SI{90}{\degree} bei oben genannten Prozessbedingungen untersucht.
 \todo{vorherige Relaxation?}
 
@@ -88,23 +88,23 @@ Es wurden Stufen und Spitzen mit Neigungen von jeweils \SI{15}{\degree}, \SI{20}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_substrate_flat}
     \subcaption{Glattes Gold-Substrat}
-    \label{fig:goldsubstrate-a}
+    \label{fig:coppersubstrate-a}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_substrate_step30}
     \subcaption{Gold-Stufe, \SI{30}{\degree}}
-    \label{fig:goldsubstrate-b}
+    \label{fig:coppersubstrate-b}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_substrate_tip60}
     \subcaption{Gold-Spitze, \SI{60}{\degree}}
-    \label{fig:goldsubstrate-c}
+    \label{fig:coppersubstrate-c}
   \end{subfigure}
-  \caption[Strukturierte Goldsubstrate]{Goldsubstrate mit unterschiedlicher Struktur und Breite und Tiefe von \SI{100}{\angstrom}.
+  \caption[Strukturierte Coppersubstrate]{Coppersubstrate mit unterschiedlicher Struktur und Breite und Tiefe von \SI{100}{\angstrom}.
     Abscheidungen wurden auf glatten Substraten, Stufen und Spitzen vorgenommen.}
-  \label{fig:goldsubstrate}
+  \label{fig:coppersubstrate}
 \end{figure}
 
 \begin{figure}[bt]
@@ -113,25 +113,25 @@ Es wurden Stufen und Spitzen mit Neigungen von jeweils \SI{15}{\degree}, \SI{20}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_deposition_flat}
     \subcaption{Abscheidung auf glattem Gold-Substrat}
-    \label{fig:golddepositions-a}
+    \label{fig:copperdepositions-a}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_deposition_step30}
     \subcaption{Abscheidung auf Gold-Stufe, \SI{30}{\degree}}
-    \label{fig:golddepositions-b}
+    \label{fig:copperdepositions-b}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{Au_deposition_tip60}
     \subcaption{Abscheidung auf Gold-Spitze, \SI{60}{\degree}}
-    \label{fig:golddepositions-c}
+    \label{fig:copperdepositions-c}
   \end{subfigure}
   \caption[Abscheidung auf strukturierten Substraten]{
     Ergebnis der Abscheidung.
     Die Substratstruktur bleibt erkennbar, wird aber nach oben verstärkt, ansonsten aber kristallin und glatt fortgesetzt.
   }
-  \label{fig:golddepositions}
+  \label{fig:copperdepositions}
 \end{figure}
 
 Das Kristallsubstrat wird auch hier fortgesetzt, jedoch verstärken sich Neigungswinkel an Stufen und Spitzen zunehmend.
